feat: conclusão da US010, adicionado o endpoint de listar projetos
