# src/routes/project.routes.js
@@ -10,5 +10,6 @@ ProjectRoutes.get(
 ProjectRoutes.get("/projects-details", ProjectController.getProjectsDetails);
 ProjectRoutes.delete("/project/:id", ProjectController.deleteProject);
 ProjectRoutes.put("/project/:id", ProjectController.updateProject);
+ProjectRoutes.get("/projects", ProjectController.listProjects);
 
 module.exports = ProjectRoutes;
